<!--
  ~ Copyright (C) 2023 Zokirjon Mamadjonov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Firebase\nAndroid</string>

    <!-- LandingPageFragment -->
    <string name="welcome">Welcome to FirebaseAndroid</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <!-- SignInFragment -->
    <string name="email">Email</string>
    <string name="email_hint">enter email</string>
    <string name="password">Password</string>
    <string name="password_hint">enter password</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_error">FirebaseAndroid do not recognize the email/password combo!</string>
    <string name="sign_in_with_google_error">Sign in with Google did not succeeded please try again later!</string>
    <string name="ok">OK</string>

    <!-- SignInFragment -->
    <string name="sign_up_error">Something went wrong, please try again!</string>

    <!-- HomeFragment -->
    <string name="auth_title">Authentication</string>
    <string name="auth_desc">Firebase Authentication provides backend services, easy-to-use SDKs, and ready-made UI libraries to authenticate users to your app.</string>
    <string name="realtime_database_title">Realtime Database</string>
    <string name="realtime_database_desc">Firebase Realtime Database is a cloud-hosted database. Data is stored as JSON and synchronized in realtime to every connected client.</string>
    <string name="cloud_firestore_title">Cloud Firestore</string>
    <string name="cloud_firestore_desc">Firebase Cloud Firestore is a flexible, scalable database for mobile, web, and server development from Firebase and Google Cloud.</string>
    <string name="storage_title">Storage</string>
    <string name="storage_desc">Firebase Cloud Storage for Firebase is built for app developers who need to store and serve user-generated content, such as photos or videos.</string>
    <string name="messaging_title">Messaging</string>
    <string name="messaging_desc">Firebase Cloud Messaging (FCM) is a cross-platform messaging solution that lets you reliably send messages at no cost.</string>
    <string name="crashlytics_title">Crashlytics</string>
    <string name="crashlytics_desc">Firebase Crashlytics is a lightweight, realtime crash reporter that helps you track, prioritize, and fix stability issues that erode your app quality.</string>
    <string name="remote_config_title">Remote Config</string>
    <string name="remote_config_desc">Firebase Remote Config is a cloud service that lets you change the behavior and appearance of your app without requiring users to download an app update.</string>
    <string name="coming_soon">Coming Soon</string>

    <!-- AuthenticationFragment -->
    <string name="authentication">Authentication</string>
    <string name="uid">UID:</string>
    <string name="auth_email">Email:</string>
    <string name="anonymous">Anonymous:</string>
    <string name="email_verified">Email Verified:</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="sign_out_error">Something went wrong, please try again!</string>

    <!-- RealtimeDatabaseFragment -->
    <string name="realtime_database">Realtime Database</string>

    <!-- NewNoteFragment -->
    <string name="new_note">New Note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>

    <!-- CloudFirestoreFragment -->
    <string name="cloud_firestore">Cloud Firestore</string>
    <string name="quote">Quote</string>
    <string name="author">Author</string>
    <string name="update">Update</string>
    <string name="update_quote_error">Something went wrong, please try again!</string>

    <!-- StorageFragment -->
    <string name="storage">Storage</string>
    <string name="upload">Upload</string>
    <string name="select_image">Select Image</string>
    <string name="image_url">Image URL</string>
    <string name="copy">Copy</string>

    <!-- CrashlyticsFragment -->
    <string name="crashlytics">Crashlytics</string>
    <string name="crash_1">Make a manual Crash 1</string>
    <string name="crash_2">Make a manual Crash 2</string>
    <string name="crash_3">Make a manual Crash 3</string>

</resources>