<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.home.crashlytics.CrashlyticsFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/material_toolbar"/>

    <TextView
        android:id="@+id/tv_crashlytics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_triple"
        android:text="@string/crashlytics"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/btn_crash_1"
        style="@style/MainButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_sextuple"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/crash_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_crashlytics" />

    <Button
        android:id="@+id/btn_crash_2"
        style="@style/MainButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_triple"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/crash_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_crash_1" />

    <Button
        android:id="@+id/btn_crash_3"
        style="@style/MainButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_triple"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/crash_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_crash_2" />

</androidx.constraintlayout.widget.ConstraintLayout>