<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.LandingPageFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_marginTop="100dp"
        android:padding="80dp"
        android:src="@drawable/ic_firebase"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/dimen_triple"
        android:layout_marginEnd="@dimen/dimen_triple"
        android:layout_marginBottom="@dimen/dimen_double"
        android:background="@null"
        android:backgroundTint="@color/firebase_orange"
        android:fontFamily="sans-serif-medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/sign_in"
        android:textSize="21sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/dimen_triple"
        android:layout_marginEnd="@dimen/dimen_triple"
        android:layout_marginBottom="50dp"
        android:background="@null"
        android:backgroundTint="@color/firebase_orange"
        android:fontFamily="sans-serif-medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/sign_up"
        android:textSize="21sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>